merge Mirkos migration changes